unpackaged/main/default/objects/pse__Resource_Request__c/fields/Allocated_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Expenses__c</fullName>
    <formula>Product__r.Expense_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Allocated Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>