unpackaged/main/default/objects/pse__Resource_Request__c/fields/Allocated_Standard_Hours__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Standard_Hours__c</fullName>
    <formula>Product__r.Standard_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Allocated Standard Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>