unpackaged/main/default/objects/pse__Resource_Request__c/fields/CountofShortlistedResources__c.field-meta.xml
<CustomField>
    <fullName>CountofShortlistedResources__c</fullName>
    <description>Count of shortlisted resources for the resource request</description>
    <formula>pse__Short_List__r.CountofShortlistResources__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count of Shortlisted Resources</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>