unpackaged/main/default/objects/pse__Resource_Request__c/fields/Customer_Onsite_Delivery2__c.field-meta.xml
<CustomField>
    <fullName>Customer_Onsite_Delivery2__c</fullName>
    <label>Customer Onsite Delivery</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>