unpackaged/main/default/objects/pse__Resource_Request__c/fields/FFX_Resource_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>FFX_Resource_Request_Type__c</fullName>
    <description>Distinguish the type of resource request.</description>
    <inlineHelpText>Distinguish the type of resource request.</inlineHelpText>
    <label>Resource Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scoping</fullName>
            </value>
            <value>
                <fullName>Delivery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>