unpackaged/main/default/objects/pse__Resource_Request__c/fields/Held_By__c.field-meta.xml
<CustomField>
    <fullName>Held_By__c</fullName>
    <label>Held By</label>
    <type>TextArea</type>
</CustomField>