unpackaged/main/default/objects/pse__Resource_Request__c/fields/Held_Date__c.field-meta.xml
<CustomField>
    <fullName>Held_Date__c</fullName>
    <label>Held Date</label>
    <type>Date</type>
</CustomField>