unpackaged/main/default/objects/pse__Resource_Request__c/fields/Onsite_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Onsite_Delivery__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <inlineHelpText>Select if Consulting Services will be Delivered onsite. If True, Customer Site Address Fields below are required.</inlineHelpText>
    <label>Customer Onsite Delivery</label>
    <type>Checkbox</type>
</CustomField>