unpackaged/main/default/objects/pse__Resource_Request__c/fields/Resource_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Resource_Request_Type__c</fullName>
    <label>Resource Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pipeline</fullName>
                <default>true</default>
                <label>Pipeline</label>
            </value>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Request Sales Hold</fullName>
            </value>
            <value>
                <fullName>Sales Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>