unpackaged/main/default/objects/pse__Resource_Request__c/fields/RR_End__c.field-meta.xml
<CustomField>
    <fullName>RR_End__c</fullName>
    <label>RR End</label>
    <type>Date</type>
</CustomField>