unpackaged/main/default/objects/pse__Resource_Request__c/fields/RR_Start__c.field-meta.xml
<CustomField>
    <fullName>RR_Start__c</fullName>
    <label>RR Start</label>
    <type>Date</type>
</CustomField>