unpackaged/main/default/objects/pse__Resource_Request__c/fields/RREndDate__c.field-meta.xml
<CustomField>
    <fullName>RREndDate__c</fullName>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <formula>pse__Preferred_Schedule__r.pse__End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RR End Date</label>
    <type>Date</type>
</CustomField>