unpackaged/main/default/objects/pse__Resource_Request__c/fields/RRStartDate__c.field-meta.xml
<CustomField>
    <fullName>RRStartDate__c</fullName>
    <formula>pse__Preferred_Schedule__r.pse__Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RR Start Date</label>
    <type>Date</type>
</CustomField>