unpackaged/main/default/objects/pse__Resource_Request__c/fields/Sales_Hold_Approved__c.field-meta.xml
<CustomField>
    <fullName>Sales_Hold_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <label>Sales Hold Approved</label>
    <type>Checkbox</type>
</CustomField>