unpackaged/main/default/objects/pse__Resource_Request__c/fields/Sales_Hold_Approver__c.field-meta.xml
<CustomField>
    <fullName>Sales_Hold_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Hold Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Resource_Requests_Sales_Hold_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>