unpackaged/main/default/objects/pse__Resource_Request__c/fields/Skills_Certifications_Help__c.field-meta.xml
<CustomField>
    <fullName>Skills_Certifications_Help__c</fullName>
    <formula>HYPERLINK("https://f5.my.salesforce.com/resource/1706817942000/SkillsCertificationsHelp", "Skills and Certifications Help.pdf")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Skills &amp; Certifications Help</label>
    <type>Text</type>
</CustomField>