unpackaged/main/default/objects/pse__Resource_Request__c/fields/SOW_Status__c.field-meta.xml
<CustomField>
    <fullName>SOW_Status__c</fullName>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <formula>TEXT( pse__Opportunity__r.SOW_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SOW Status</label>
    <type>Text</type>
</CustomField>