unpackaged/main/default/objects/pse__Resource_Request__c/fields/Theater__c.field-meta.xml
<CustomField>
    <fullName>Theater__c</fullName>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <formula>IF(ISBLANK(pse__Project__r.Theater__c), pse__Opportunity__r.Theater2__c ,pse__Project__r.Theater__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Auto-populated based on Region. If Top level Region is selected (Americas, EMEA, APCJ), Theater will be blank.</inlineHelpText>
    <label>Theater</label>
    <type>Text</type>
</CustomField>