unpackaged/main/default/objects/pse__Resource_Request__c/fields/Type_of_Hours__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Hours__c</fullName>
    <label>Type of Hours</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Either</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>