unpackaged/main/default/objects/pse__Resource_Request__c/validationRules/Product_Required_to_Hold_Resource.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Required_to_Hold_Resource</fullName>
    <active>true</active>
    <description>Product field is required to hold resource.</description>
    <errorConditionFormula>AND(
NOT(ISNEW()),
pse__Resource_Held__c =TRUE,
ISBLANK( Product__c ))</errorConditionFormula>
    <errorDisplayField>Product__c</errorDisplayField>
    <errorMessage>You need to select  a Product to Hold Resource.</errorMessage>
</ValidationRule>