unpackaged/main/default/objects/pse__Resource_Request__c/listViews/Assigned.listView-meta.xml
<ListView>
    <fullName>Assigned</fullName>
    <columns>NAME</columns>
    <columns>pse__Resource_Role__c</columns>
    <columns>Resource_Request_Type__c</columns>
    <columns>pse__Status__c</columns>
    <columns>pse__Staffer_Resource__c</columns>
    <columns>pse__Opportunity__c</columns>
    <columns>pse__Project__c</columns>
    <columns>pse__Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Status__c</field>
        <operation>equals</operation>
        <value>Assigned</value>
    </filters>
    <label>3. Assigned</label>
    <language>en_US</language>
</ListView>