unpackaged/main/default/objects/pse__Resource_Request__c/listViews/Draft.listView-meta.xml
<ListView>
    <fullName>Draft</fullName>
    <columns>NAME</columns>
    <columns>pse__Resource_Request_Name__c</columns>
    <columns>Resource_Request_Type__c</columns>
    <columns>pse__Resource_Role__c</columns>
    <columns>pse__Status__c</columns>
    <columns>Product__c</columns>
    <columns>pse__SOW_Hours__c</columns>
    <columns>pse__Opportunity__c</columns>
    <columns>pse__Project__c</columns>
    <columns>SOW_Status__c</columns>
    <columns>pse__Start_Date__c</columns>
    <columns>Theater__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Status__c</field>
        <operation>equals</operation>
        <value>Draft</value>
    </filters>
    <label>1. Draft</label>
</ListView>