unpackaged/main/default/objects/pse__Resource_Request__c/listViews/EMEA_Middle_East.listView-meta.xml
<ListView>
    <fullName>EMEA_Middle_East</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>pse__Region__c</columns>
    <columns>Theater__c</columns>
    <columns>pse__Status__c</columns>
    <columns>pse__Opportunity__c</columns>
    <columns>pse__Project__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Theater__c</field>
        <operation>equals</operation>
        <value>EMEA</value>
    </filters>
    <filters>
        <field>pse__Region__c</field>
        <operation>equals</operation>
        <value>Saudi Arabia,United Arab Emirates</value>
    </filters>
    <label>EMEA: Middle East</label>
    <sharedTo>
        <group>PSA_Consulting_Mgmt_EMEA</group>
        <group>PSA_Project_Mgmt_EMEA</group>
    </sharedTo>
</ListView>