unpackaged/main/default/objects/pse__Resource_Request__c/listViews/EMEA_Resource_Requests.listView-meta.xml
<ListView>
    <fullName>EMEA_Resource_Requests</fullName>
    <columns>NAME</columns>
    <columns>pse__Region__c</columns>
    <columns>Theater__c</columns>
    <columns>pse__Status__c</columns>
    <columns>pse__Opportunity__c</columns>
    <columns>pse__Project__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Region__c</field>
        <operation>equals</operation>
        <value>Canada</value>
    </filters>
    <label>AMER: Canada</label>
    <sharedTo>
        <group>PSA_Consulting_Mgmt_AMER</group>
        <group>PSA_Project_Mgmt_AMER</group>
    </sharedTo>
</ListView>