unpackaged/main/default/objects/pse__Resource_Request__c/listViews/Hold.listView-meta.xml
<ListView>
    <fullName>Hold</fullName>
    <columns>NAME</columns>
    <columns>Resource_Request_Type__c</columns>
    <columns>pse__Status__c</columns>
    <columns>pse__Staffer_Resource__c</columns>
    <columns>pse__Opportunity__c</columns>
    <columns>pse__Project__c</columns>
    <columns>pse__Resource_Role__c</columns>
    <columns>pse__Start_Date__c</columns>
    <columns>pse__Region__c</columns>
    <columns>Theater__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Status__c</field>
        <operation>equals</operation>
        <value>Hold</value>
    </filters>
    <label>4. Hold</label>
</ListView>